--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "formik": "^1.5.7",
-    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
