--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -16,6 +16,7 @@
     },
     "rules": {
       "import/prefer-default-export": 0,
+      "react/prop-types": 0,
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
   }
