--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ cache:
   directories:
   - node_modules
 script:
-  - npm test -- -u
-  - npm test -- --coverage 
+  - npm test -- -u --coverage 
 after_script:
   - npm run coveralls
