--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^1.5.7",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "nyc": "^14.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
@@ -22,6 +23,14 @@
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/src/css/",
+      "!<rootDir>/src/css/utils"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
