--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "coveralls": "^3.0.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.2",
+    "express": "^4.17.1",
     "formik": "^1.5.7",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
@@ -28,22 +29,17 @@
     "serve": "^11.0.1",
     "yup": "^0.27.0"
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!<rootDir>/node_modules/",
-      "!<rootDir>/src/utils/",
-      "!<rootDir>/src/state/"
-    ]
-  },
   "scripts": {
-    "start": "webpack-dev-server --open --hot --mode development",
     "build": "webpack --mode production",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "coverage": "react-scripts test --coverage",
-    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
-    "lint": "eslint src"
+    "test": "jest",
+    "test:coveralls": "jest -u | coveralls",
+    "test:dev": "jest --watchAll -u",
+    "coverage": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
+    "lint": "eslint ./src",
+    "lint-fix": "eslint ./src --fix",
+    "heroku-postbuild": "rimraf dist && npm run build",
+    "start": "node server.js",
+    "dev": "webpack-dev-server --mode development --open --hot"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -80,5 +76,25 @@
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ],
+    "verbose": true,
+    "testURL": "http://localhost:9001/",
+    "setupFiles": [
+      "./src/setupTests.js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/src/lib/tags.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/assetsTransformer.js",
+      "\\.(css|less|scss)$": "<rootDir>/src/__mocks__/assetsTransformer.js"
+    }
   }
 }
