--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
       "./src/setupTests.js"
     ],
     "coveragePathIgnorePatterns": [
-      "<rootDir>/src/lib/tags.js"
+      "<rootDir>/src/lib/tags.js",
+      "<rootDir>/src/state"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/assetsTransformer.js",
