--- a/package.json
+++ b/package.json
@@ -91,7 +91,10 @@
     ],
     "coveragePathIgnorePatterns": [
       "<rootDir>/src/lib/tags.js",
-      "<rootDir>/src/state"
+      "<rootDir>/src/state",
+      "<rootDir>/src/utils",
+      "<rootDir>/src/components/UserRoute.js",
+      "<rootDir>/src/forms"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/assetsTransformer.js",
